static/style.css
/* Navigation header */

.navbar-brand > img {
    position: relative;
    top: -20px;
    padding-right: 19px;
    float: left;
} 

@media (max-width: 384px) {
  .navbar-brand {
      padding-right: 0;
  }
  .navbar-brand img {
      padding-right: 10px;
      width: 30px;
      height: 30px;
      top: -6px;
      box-sizing: content-box;
  }
}

.alert-warning a {
    color: white;
    text-decoration: underline;
}


.contentwrap {
    padding-top: 22px;
}

@media (min-width: 768px) { 
  .contentwrap {
      padding-top: 42px;
  }
}

@media (min-width: 992px) { 
  .sidebarwrap {
    padding-top: 42px;
  }
}

footer ul.pull-right li:last-child {
    margin-right: 0;
}

.top-alert {
    margin-top: 32px;
    margin-bottom: 0px;
}

.alert .glyphicon {
    top: 2px;
    margin-right: 4px;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
    color: #ffffff;
    background-color: #18BC9C;
}

#browse .btn-toolbar {
    margin-bottom: 24px;
    margin-top: -24px;
}

#browse .btn-toolbar + * {
    clear: both;
}


#browse .nav-pills {
    margin-top: -21px;
    margin-bottom: 21px;
}

@media (min-width: 768px) {
  #browse .btn-toolbar, #browse .nav-pills {
    float: right !important;
  }
  #browse .nav-pills {
    margin-top: 21px;
  }
}


/* / */

#front .lead {
    margin-top: 32px;
}

#front form {
    margin-bottom: 48px;
}

#front input {
    max-width: 24em;
}

/* /about */

#about {
}

/* /candidates */

.cvblock {
    margin-top: 48px;
    margin-bottom: 36px;
}

.party {
    margin-left: 0.1em;
    color: #bbb;
}

.candidate .thumb {
    margin-top: 6px;
}

.candidate .name {
    font-size: 20px;
}

.candidates .get-updates {
    margin-top: 24px;
}

/* /upload_cv */

/* Make file upload button look good */

.btn-file {
    position: relative;
    overflow: hidden;
    margin-top: 24px;
}
.btn-file input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    font-size: 100px;
    text-align: right;
    filter: alpha(opacity=0);
    opacity: 0;
    outline: none;
    background: white;
    cursor: inherit;
    display: block;
}

#upload_cv_confirmed form {
  margin-bottom: 36px;
}

.not_me {
    font-size: 15px;
    margin-left: 0.5em;
}

#upload_cv .what_this {
    margin-top: 48px;
}

.is_is_not img {
    width: 99%;
    height: auto;
}

.is_is_not div {
    text-align: center;
}

.is_is_not .top {
    padding-bottom: 4px;
    font-weight: bold;
}
.is_is_not .bottom {
    padding-top: 6px;
    font-weight: bold;
}

.is_is_not {
    padding-top: 16px;
}

/* when narrow, keep buttons apart */
@media (max-width: 768px) { 
  #upload_cv .btn {
      margin-top: 6px;
  }
}


/* /show_cv and / and /browse */

body, html {
  height:100%;
}

/* See http://stackoverflow.com/a/12121929/284340 */
.thumb img {
  width: 95%;
  height: auto;
  margin: auto;
  box-sizing: content-box;
  border: 5px solid #fff;
}

.thumb .thumbimg {
  border: 6px solid #bbb;
}
.thumb .thumbimg:hover {
  border: 6px solid #18BC9C;
}

.browse-small .thumb .thumbimg {
  border: 4px solid #bbb;
}
.browse-small .thumb .thumbimg:hover {
  border: 4px solid #18BC9C;
}

@media (min-width: 768px) {
  .thumb .thumbimg {
    border: 8px solid #bbb;
  }
  .thumb .thumbimg:hover {
    border: 8px solid #18BC9C;
  }

  .browse-small .thumb .thumbimg {
    border: 5px solid #bbb;
  }
  .browse-small .thumb .thumbimg:hover {
    border: 5px solid #18BC9C;
  }
}

.thumb {
  margin-bottom: 28px;
}

.thumb iframe {
  height: 200%;
}

.link_full_page {
    margin-bottom: 16px;
    text-align: center;
    padding-top: 6px;
}

#recent_cvs h2 {
    margin-bottom: 32px;
}

#browse_link {
    margin-top: 10px;
}

#browse_link a, #ynmp_link a {
    font-size: 20px;
}
#ynmp_link {
    margin-top: 32px;
}

#browse h1 {
    margin-bottom: 48px;
}

#browse nav {
    margin-top: 16px;
}


.show-cv-navbar .navbar-brand {
    padding-left: 12px;
}
.show-cv-navbar .btn-success {
    margin-top: 8px;
    margin-left: 8px;
}

@media (max-width: 768px) {
  .show-cv-navbar .btn-success {
    margin-top: 12px;
  }
}


.navbar-default.show-cv-navbar:hover .navbar-brand {
  color: white; 
}

.navbar-default.show-cv-navbar .navbar-brand, .navbar-default.show-cv-navbar .navbar-text {
  cursor: default;
}


@media (min-width: 768px) { 
  .show-cv-navbar .navbar-brand {
      padding-left: 40px;
      margin-left: 0px;
  }
}

#show_cv {
  background:url(https://ssl.gstatic.com/docs/common/v-spinner_gray.gif) #d1d1d1 center center no-repeat;
}

#show_cv {
    height: 100%;
    overflow: hidden; /* prevent double scroll bars due to slight differences on some browsers */
    padding-top: 10px;
}

#show_cv iframe {
    width: 100%;
    height: 100%;
}

.show-cv-alert-row {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 24px;
}

.show-cv-alert-row .col-xs-2, .show-cv-alert-row .col-xs-8 {
    padding-left: 0;
    padding-right: 0;
}

/* /email_candidates */

.dear-message {
    margin-left: 15px;
}

/* /tweet_candidates */

.done-button {
    margin-top: 48px;
}

#tweet_candidates .party {
    font-size: 22.5px;
}

/*  Bootstrap Clearfix */

/* http://www.bluthemes.com/blog/3/clearing-bootstrap-3-columns */

/* Column clear fix */
.col-lg-1:nth-child(12n+1),
.col-lg-2:nth-child(6n+1),
.col-lg-3:nth-child(4n+1),
.col-lg-4:nth-child(3n+1),
.col-lg-6:nth-child(2n+1),
.col-md-1:nth-child(12n+1),
.col-md-2:nth-child(6n+1),
.col-md-3:nth-child(4n+1),
.col-md-4:nth-child(3n+1),
.col-md-6:nth-child(2n+1),
.col-sm-1:nth-child(12n+1),
.col-sm-2:nth-child(6n+1),
.col-sm-3:nth-child(4n+1),
.col-sm-4:nth-child(3n+1),
.col-sm-6:nth-child(2n+1){
  clear: none;
}
.col-xs-1:nth-child(12n+1),
.col-xs-2:nth-child(6n+1),
.col-xs-3:nth-child(4n+1),
.col-xs-4:nth-child(3n+1),
.col-xs-6:nth-child(2n+1){
  clear: left;
}

/*  Tablet  */
@media (min-width:767px){

  /* Column clear fix */
  .col-lg-1:nth-child(12n+1),
  .col-lg-2:nth-child(6n+1),
  .col-lg-3:nth-child(4n+1),
  .col-lg-4:nth-child(3n+1),
  .col-lg-6:nth-child(2n+1),
  .col-md-1:nth-child(12n+1),
  .col-md-2:nth-child(6n+1),
  .col-md-3:nth-child(4n+1),
  .col-md-4:nth-child(3n+1),
  .col-md-6:nth-child(2n+1),
  .col-xs-1:nth-child(12n+1),
  .col-xs-2:nth-child(6n+1),
  .col-xs-3:nth-child(4n+1),
  .col-xs-4:nth-child(3n+1),
  .col-xs-6:nth-child(2n+1){
    clear: none;
  }
  .col-sm-1:nth-child(12n+1),
  .col-sm-2:nth-child(6n+1),
  .col-sm-3:nth-child(4n+1),
  .col-sm-4:nth-child(3n+1),
  .col-sm-6:nth-child(2n+1){
    clear: left;
  }
}


/*  Medium Desktop  */
@media (min-width:992px){

  /* Column clear fix */
  .col-lg-1:nth-child(12n+1),
  .col-lg-2:nth-child(6n+1),
  .col-lg-3:nth-child(4n+1),
  .col-lg-4:nth-child(3n+1),
  .col-lg-6:nth-child(2n+1),
  .col-sm-1:nth-child(12n+1),
  .col-sm-2:nth-child(6n+1),
  .col-sm-3:nth-child(4n+1),
  .col-sm-4:nth-child(3n+1),
  .col-sm-6:nth-child(2n+1),
  .col-xs-1:nth-child(12n+1),
  .col-xs-2:nth-child(6n+1),
  .col-xs-3:nth-child(4n+1),
  .col-xs-4:nth-child(3n+1),
  .col-xs-6:nth-child(2n+1){
    clear: none;
  }
  .col-md-1:nth-child(12n+1),
  .col-md-2:nth-child(6n+1),
  .col-md-3:nth-child(4n+1),
  .col-md-4:nth-child(3n+1),
  .col-md-6:nth-child(2n+1){
    clear: left;
  }
}


/*  Large Desktop  */
@media (min-width:1200px){

  /* Column clear fix */
  .col-md-1:nth-child(12n+1),
  .col-md-2:nth-child(6n+1),
  .col-md-3:nth-child(4n+1),
  .col-md-4:nth-child(3n+1),
  .col-md-6:nth-child(2n+1),
  .col-sm-1:nth-child(12n+1),
  .col-sm-2:nth-child(6n+1),
  .col-sm-3:nth-child(4n+1),
  .col-sm-4:nth-child(3n+1),
  .col-sm-6:nth-child(2n+1),
  .col-xs-1:nth-child(12n+1),
  .col-xs-2:nth-child(6n+1),
  .col-xs-3:nth-child(4n+1),
  .col-xs-4:nth-child(3n+1),
  .col-xs-6:nth-child(2n+1){
    clear: none;
  }
  .col-lg-1:nth-child(12n+1),
  .col-lg-2:nth-child(6n+1),
  .col-lg-3:nth-child(4n+1),
  .col-lg-4:nth-child(3n+1),
  .col-lg-6:nth-child(2n+1){
    clear: left;
  }
}

